src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Group__c</fullName>
        <label>Campaign Group</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events and Awards</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager__c</fullName>
        <description>This is field for historical records to store the Campaign Manager. The Campaign Manager value for new Campaigns is stored in the Owner field on a Campaign record</description>
        <inlineHelpText>This is field for historical records to store the Campaign Manager. The Campaign Manager value for new Campaigns is stored in the Owner field on a Campaign record</inlineHelpText>
        <label>Historic Campaign Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Programme__c</fullName>
        <description>Name of parent campaign</description>
        <formula>Parent.Parent.Name</formula>
        <inlineHelpText>Parent campaign</inlineHelpText>
        <label>Campaign Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI_Hierarchy__c</fullName>
        <description>Calculates ROI based on opportunities associated to children of this campaign (Hierarchy)</description>
        <formula>(HierarchyAmountWonOpportunities - ActualCost) / ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates ROI based on opportunities associated to children of this campaign (Hierarchy)</inlineHelpText>
        <label>Campaign ROI - Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>( AmountWonOpportunities -  ActualCost ) /  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI is the return on investment or net gain.  This is a sample formula field that calculates (TOTAL VALUE WON OPPORTUNITIES - ACTUAL COST) / ACTUAL COST</inlineHelpText>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Campaign_Name__c</fullName>
        <inlineHelpText>On website orders if the google campaign name matches this then this campaign will be linked to the opportunity.</inlineHelpText>
        <label>Google Campaign Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Reporting__c</fullName>
        <description>Pulls parent campaign group</description>
        <formula>IF (ParentId =&quot;&quot;, TEXT(Campaign_Group__c), TEXT(Parent.Campaign_Group__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign group of parent campaign</inlineHelpText>
        <label>Group (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Campaign data has been migrated from Course Booker</description>
        <inlineHelpText>Indicates whether Campaign data has been migrated from Course Booker</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_ID__c</fullName>
        <description>This is the unique ID for the matching record(s) from Course Booker. This maps to data from any one of 3 tables: Promotions; PromotionMater; Campaign</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the unique ID for the matching record(s) from Course Booker. This maps to data from any one of 3 tables: Promotions; PromotionMater; Campaign</inlineHelpText>
        <label>PK_CB_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_on_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tick if the campaign should show as an available campaign to assign to an opportunity</description>
        <inlineHelpText>Tick if the campaign should show as an available campaign to assign to an opportunity</inlineHelpText>
        <label>Show on Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Campaign_Programmes_Activities</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Group_Reporting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Campaign Programmes / Activities</label>
    </listViews>
    <listViews>
        <fullName>AdHoc</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>email - offer</value>
        </filters>
        <label>AdHoc</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Group__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Non_migrated_Campaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>PK_CB_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All Non migrated Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Activities</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Group__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Campaign_Activity</value>
        </filters>
        <label>Campaign Activities</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Programmes</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Group__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Campaign_Programme</value>
        </filters>
        <label>Campaign Programmes</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Promotions</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Campaign_Group__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Campaign_Programme,Campaign.Campaign_Promotions</value>
        </filters>
        <label>Campaign Promotions</label>
    </listViews>
    <listViews>
        <fullName>Created_today</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created today</label>
    </listViews>
    <listViews>
        <fullName>Migrated_Campaigns</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>PK_CB_ID__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PK_CB_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Migrated Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Campaign_Activity</fullName>
        <active>true</active>
        <label>Campaign Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Programme</fullName>
        <active>true</active>
        <label>Campaign Programme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Promotions</fullName>
        <active>true</active>
        <label>Campaign Promotions</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>